--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   mask_text_input_formatter: ^2.0.0
   badges: ^2.0.1
   intl: ^0.17.0
+  qr_flutter: ^4.0.0
+  add_to_cart_animation: ^0.0.7
 
 dev_dependencies:
   flutter_test:
@@ -64,6 +66,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/fruits/
+    - assets/app_images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
