--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="br.com.damasceno.greengrocer">
+
+    <uses-permission android:name="android.permission.INTERNET"/>
+
    <application
         android:label="greengrocer"
         android:icon="@mipmap/ic_launcher">
