--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   json_annotation: ^4.4.0
   freezed: ^2.2.0
   freezed_annotation: ^2.1.0
+  flutter_secure_storage: ^5.0.2
 
 dev_dependencies:
   flutter_test:
